fixed dark mode for chatbox

--- a/fantasy-club/src/app/chatbox/chatbox.component.css
+++ b/fantasy-club/src/app/chatbox/chatbox.component.css
@@ -1,6 +1,6 @@
 #messageBox {
     background-color: white;
-    color: black !important;
+    color: black;
 }
 .listOfGame {
     color: blue;
@@ -15,4 +15,9 @@
 
 .listOfGame:hover {
     color: lightblue;
+}
+
+.darkMode {
+    background-color: black !important;
+    color: white !important;
 }
